Move footer to separate file for generic elements

--- a/src/main/resources/templates/health.html
+++ b/src/main/resources/templates/health.html
@@ -11,6 +11,6 @@
 <br>
 <a href="reports/jacoco/index.html">Отчёт покртыия Jacoco</a>
 
-<div th:insert="footer"></div>
+<div th:replace="general :: footer"></div>
 </body>
 </html>
