--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <h2 th:utext="${message}">..!..</h2>
 
 
-<div th:insert="footer"></div>
+<div th:replace="general :: footer"></div>
 </body>
 
 </html>
