--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -43,3 +43,29 @@ body {
     padding-right: 10px;
     padding-left: 10px;
 }
+
+.button1 {
+    display:inline-block;
+    padding:0.35em 1.2em;
+    border:0.1em solid #ffffff;
+    margin:0 0.3em 0.3em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-weight:300;
+    color: #ffffff;
+    background-color: #04AA6D;
+    text-align:center;
+    transition: all 0.2s;
+}
+.button1:hover {
+    color: #04AA6D;
+    background-color: #FFFFFF;
+    border-color: #04AA6D;
+}
+@media all and (max-width:30em) {
+    .button1 {
+        display:block;
+        margin:0.4em auto;
+    }
+} 
