--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,13 @@
 <body class="site">
 <main class="site-content">
     <h1>Добро пожаловать.</h1>
-    <a class="button1" th:href="@{/employees}">Список сотрудников</a>
-    <!--<a class="button1" th:href="@{/departments}">Список подразделений</a>-->
+    <div>
+        <a class="button1" th:href="@{/employees}">Список сотрудников</a>
+    </div>
+
+    <div>
+        <a class="button1" th:href="@{/departments}">Список подразделений</a>
+    </div>
 </main>
 
 <footer th:insert="general :: footer"></footer>
