--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -114,3 +114,20 @@ body {
 .autoTable tbody tr:nth-child(even){
     background: #f3f3f3;
 }
+
+.inputText1 {
+    box-sizing: border-box;
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 0.35em 1.2em;
+    margin: 0 0.3em 0.3em 2px;
+    border: 2px solid transparent;
+    border-bottom: 2px solid #04AA6D;
+}
+
+.inputText1:focus {
+    outline: none !important;
+    border: 2px solid #04AA6D;
+    border-radius:0.12em;
+}
