--- a/src/main/resources/templates/health.html
+++ b/src/main/resources/templates/health.html
@@ -5,12 +5,15 @@
     <title>Состояние релиза</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
-<body>
+<body class="site">
+<main class="site-content">
 <h1>Отчёт о функционировании последнего релиза</h1>
 <a href="reports/junit/index.html">Отчёт прохождения Junit тестов</a>
 <br>
 <a href="reports/jacoco/index.html">Отчёт покртыия Jacoco</a>
 
-<div th:replace="general :: footer"></div>
+</main>
+
+<footer th:insert="general :: footer"></footer>
 </body>
 </html>
