--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -5,6 +5,7 @@
     <title>Welcome</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/dropdown.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/collapsible.css}"/>
 </head>
 <body class="site">
 
@@ -12,12 +13,16 @@
 <main class="site-content">
     <script th:src="@{/js/dropdown.js}"></script>
 
-    <ul th:fragment="hierarchy(departments)" th:unless="${#lists.isEmpty(departments)}">
-        <li th:each="child : ${departments}" th:inline="text">
-            [[${child.getName()}]]
-            <ul th:replace="this::hierarchy(${child.getChildren()})"></ul>
-        </li>
-    </ul>
+    <div th:fragment="hierarchy(departments)" th:unless="${#lists.isEmpty(departments)}">
+        <div th:each="child : ${departments}">
+            <button type="button" class="collapsible" th:text="${child.getName()}"></button>
+            <div class="collapsible-content">
+                <div th:replace="this::hierarchy(${child.getChildren()})"></div>
+            </div>
+        </div>
+    </div>
+
+    <script th:src="@{/js/collapsible.js}"></script>
 </main>
 
 
