--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -66,6 +66,7 @@ body {
     background-color: #04AA6D;
     text-align:center;
     transition: all 0.2s;
+    font-size: 16px;
 }
 
 .button1:hover {
@@ -140,4 +141,11 @@ a:link {
 a:visited {
     color: #282828;
 
+}
+
+.horizontal-collapse {
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
