Add resizable inputs

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -149,3 +149,8 @@ a:visited {
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
+
+.tmp-element {
+    visibility: hidden;
+    white-space: pre;
+}
